dbus (1.4.12-3) UNRELEASED; urgency=low

  * Mention CVE-2011-2200 in the changelog for 1.4.12-1 now it has a CVE ID
  * Merge some things from Ubuntu, via experimental:
    - run dbus-uuidgen --ensure in postinst
    - call ReloadConfig with dbus-send in the postinst, since that'll work
      regardless of whether dbus was started with sysvinit or Upstart; just
      call it unconditionally, and ignore any failures we might see (in
      chroots or if dbus-daemon wasn't running)
  * and more things from experimental:
    - improve comments in postinst explaining why it behaves as it does

 -- Simon McVittie <smcv@debian.org>  Thu, 16 Jun 2011 08:21:35 +0100

dbus (1.4.12-2) unstable; urgency=medium

  * Don't run tests during build (again), it appears they time out on most of
    of the buildds
  * Explicitly build-depend on automake 1.10, so buildds won't try and fail
    with automake1.9 like kfreebsd-i386 did

 -- Simon McVittie <smcv@debian.org>  Sat, 11 Jun 2011 14:11:04 +0100

dbus (1.4.12-1) unstable; urgency=medium

  * New upstream release fixes local DoS (Closes: #629938, CVE-2011-2200)
  * Don't delete jquery.js, no longer installed by recent Doxygen
  * Build-depend on libglib2.0-dev, libdbus-glib-1-dev for better regression
    test coverage (dbus-glib is a circular dependency, but both of these
    dependencies can be dropped if bootstrapping new architectures)

 -- Simon McVittie <smcv@debian.org>  Fri, 10 Jun 2011 22:39:14 +0100

dbus (1.4.10-2) unstable; urgency=low

  * Disable silent rules so we can have useful buildd logs
  * Update Vcs-Git, Vcs-Browser to the form preferred by the Alioth admins
  * Disable -Wl,--gc-sections and related flags: the size decrease is
    negligible, and these options currently segfault ld on armel and mips*
    (Closes: #628834)
  * Disable the build-time tests for now, they need more upstream work before
    they'll pass in a minimal build chroot
