@@ -11,7 +11,7 @@ Uploaders: Sjoerd Simons <sjoerd@debian.org>,
 # but if you have them in Build-Depends, more tests can be run
 Build-Depends: automake (>= 1:1.10),
                autotools-dev,
-               debhelper (>= 8),
+               debhelper (>= 8.1.3),
                dh-autoreconf,
                doxygen,
                dpkg-dev (>= 1.16.0~ubuntu4),
@@ -74,6 +74,8 @@ Description: simple interprocess messaging system (X11 deps)
 
 Package: libdbus-1-3
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends}
 Breaks: kdebase-workspace-bin (<< 4:4.4.5-9),
@@ -113,6 +115,8 @@ Description: simple interprocess messaging system (documentation)
 Package: libdbus-1-dev
 Section: libdevel
 Architecture: any
+Pre-Depends: multiarch-support,
+             ${misc:Pre-Depends}
 Depends: libdbus-1-3 (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends},
@@ -128,6 +132,7 @@ Package: dbus-1-dbg
 Section: debug
 Priority: extra
 Architecture: any
+Pre-Depends: ${misc:Pre-Depends}
 Depends: libdbus-1-3 (= ${binary:Version}),
          dbus (= ${binary:Version}),
          dbus-x11 (= ${binary:Version}),
