@@ -1,1 +1,0 @@
-debian/tmp/usr/lib/libdbus-1*.so.* lib/
