@@ -8,8 +8,9 @@
 	dh $@ --builddirectory=build --with autoreconf --parallel
 
 libdbusN := $(shell sed -rn 's/Package:[[:space:]]*(libdbus-[0-9-]+)[[:space:]]*$$/\1/p' debian/control | head -n 1)
+libdbus_soname := $(patsubst libdbus-1-%,libdbus-1.so.%,$(libdbusN))
 
-multiarch := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+DEB_HOST_MULTIARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 cflags := $(shell dpkg-buildflags --get CFLAGS)
 ldflags := $(shell dpkg-buildflags --get LDFLAGS)
 ldflags += -Wl,--as-needed
@@ -33,7 +34,8 @@ override_dh_auto_configure:
 		-- \
 		$(common_configure_flags) \
 		--enable-xml-docs \
-		--enable-doxygen-docs
+		--enable-doxygen-docs \
+		--libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
 	dh_auto_configure \
 		--builddirectory=build-debug \
 		-- \
@@ -44,7 +46,7 @@ override_dh_auto_configure:
 		--enable-checks \
 		--enable-tests \
 		--enable-verbose-mode \
-		--prefix=/usr/lib/$(multiarch)/dbus-1.0/debug-build
+		--prefix=/usr/lib/$(DEB_HOST_MULTIARCH)/dbus-1.0/debug-build
 
 override_dh_auto_build:
 	dh_auto_build
@@ -61,15 +63,19 @@ override_dh_auto_install:
 	make -C build-debug install-exec DESTDIR=$(CURDIR)/debian/tmp
 
 override_dh_link:
-	dh_link -plibdbus-1-dev lib/$$(basename $$(readlink debian/tmp/usr/lib/libdbus-1.so)) usr/lib/libdbus-1.so
+	dh_link -plibdbus-1-dev lib/$(DEB_HOST_MULTIARCH)/$$(basename $$(readlink debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libdbus-1.so)) usr/lib/$(DEB_HOST_MULTIARCH)/libdbus-1.so
 	dh_link --remaining-packages
 
 # if bootstrapping (without dbus-glib), no tests will get installed - create
 # the directory in case that's happened, so the .install file doesn't need
 # modification
 override_dh_install:
-	install -d debian/tmp/usr/lib/dbus-1.0/test
-	dh_install -Xlibdbus-1.la --list-missing
+	install -d debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/dbus-1.0/test
+	rm -f debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libdbus-1.la
+	dh_install -p$(libdbusN) \
+		"usr/lib/$(DEB_HOST_MULTIARCH)/$(libdbus_soname)*" \
+		lib/$(DEB_HOST_MULTIARCH)
+	dh_install --remaining-packages --list-missing
 	install -m 644 -D debian/dbus-Xsession debian/dbus-x11/etc/X11/Xsession.d/75dbus_dbus-launch
 
 override_dh_installinit:
